--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <hr />
         <p>
-            <a href="/lgbt"><img src="/images/flag.png" style="height: 31px;" alt="lgbt" /></a>&nbsp;
+            <a href="/lgbt"><img src="./images/flag.png" style="height: 31px;" alt="lgbt" /></a>&nbsp;
             <a href="https://noscript.net/getit/"><img src="/images/noscript.png" style="width: 31px; height: 31px;"
                     alt="noscript.png"></a>&nbsp;
             <a href="https://creativecommons.org/licenses/by/4.0/"><img src="/images/cc.png" style="border-style: none;"
