--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
     <meta charset="UTF-8" />
     <meta name="description" content="<%= description %>" />
-    <meta name="author" content="Fern" />
+    <meta name="author" content="Sue-woo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
         Fake Phone Number Generate
     </title>
 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/fake-phone-number/styles.css" />
 
 </head>
 
@@ -28,12 +28,12 @@
 
     <main>
 
-        <script src="/fakenumbers.js"></script>
+        <script src="/fake-phone-number/fakenumbers.js"></script>
         <noscript>
             <p>
-                <img src="/images/noscript.png" style="width: 31px; height: 31px;" alt="noscript.png">&nbsp;This tool
+                <img src="/fake-phone-number/images/noscript.png" style="width: 31px; height: 31px;" alt="noscript.png">&nbsp;This tool
                 requires
-                JavaScript. You can inspect the source at: <a href="/fakenumbers.js">/js/fakenumbers.js</a>
+                JavaScript. You can inspect the source at: <a href="/fake-phone-number/fakenumbers.js">/fake-phone-number/js/fakenumbers.js</a>
             </p>
         </noscript>
         <p>
@@ -201,7 +201,7 @@
         </p>
 
         <p>
-            Source code: <a href="/fakenumbers.js">
+            Source code: <a href="/fake-phone-number/fakenumbers.js">
                 /fakenumbers.js
             </a>
         </p>
@@ -212,10 +212,10 @@
 
         <hr />
         <p>
-            <a href="/lgbt"><img src="./images/flag.png" style="height: 31px;" alt="lgbt" /></a>&nbsp;
-            <a href="https://noscript.net/getit/"><img src="/images/noscript.png" style="width: 31px; height: 31px;"
+            <a href="/lgbt"><img src="/fake-phone-number/images/flag.png" style="height: 31px;" alt="lgbt" /></a>&nbsp;
+            <a href="https://noscript.net/getit/"><img src="/fake-phone-number/images/noscript.png" style="width: 31px; height: 31px;"
                     alt="noscript.png"></a>&nbsp;
-            <a href="https://creativecommons.org/licenses/by/4.0/"><img src="/images/cc.png" style="border-style: none;"
+            <a href="https://creativecommons.org/licenses/by/4.0/"><img src="/fake-phone-number/images/cc.png" style="border-style: none;"
                     alt="Creative Commons Attribution 4.0" /></a>&nbsp;
 
         </p>
