--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <script src="/fake-phone-number/fakenumbers.js"></script>
         <noscript>
             <p>
-                <img src="/fake-phone-number/images/noscript.png" style="width: 31px; height: 31px;" alt="noscript.png">&nbsp;This tool
-                requires
-                JavaScript. You can inspect the source at: <a href="/fake-phone-number/fakenumbers.js">/fake-phone-number/js/fakenumbers.js</a>
+                This tool requires JavaScript. You can inspect the source at: <a href="/fake-phone-number/fakenumbers.js">/fake-phone-number/js/fakenumbers.js</a>
             </p>
         </noscript>
         <p>
