--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="UTF-8" />
-    <meta name="description" content="<%= description %>" />
+    <meta name="description" content="Fake Phone Number Generate" />
     <meta name="author" content="Sue-woo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
